<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3A161">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:background="@drawable/rounded_corner_def"
                android:fontFamily="monospace"
                android:gravity="start"
                android:includeFontPadding="true"
                android:padding="20dp"
                android:text="@string/tv_title"
                android:textColor="@color/dark_grey"
                android:textSize="45sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <EditText
                android:id="@+id/et_enterName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:fontFamily="monospace"
                android:gravity="center"
                android:hint="@string/et_enterName"
                android:inputType="textPersonName"
                android:textColor="@color/dark_grey"
                android:textColorHint="#81837F7F" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corner_submit"
                android:fontFamily="monospace"
                android:text="@string/btn_start"
                android:textColor="@color/white" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>